--- a/monoidsMad.cabal
+++ b/monoidsMad.cabal
@@ -26,6 +26,13 @@ executable mip
   build-depends:       base
   default-language:    Haskell2010
 
+executable mhs
+  hs-source-dirs:      src
+  main-is:             MonoidHomomorphisms.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is MonoidHomomorphisms
+  build-depends:       base
+  default-language:    Haskell2010
+
 test-suite monoidsMad-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
