--- a/monoidsMad.cabal
+++ b/monoidsMad.cabal
@@ -31,6 +31,7 @@ executable mhs
   main-is:             MonoidHomomorphisms.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is MonoidHomomorphisms
   build-depends:       base
+                     , criterion
   default-language:    Haskell2010
 
 test-suite monoidsMad-test
