--- a/monoidsMad.cabal
+++ b/monoidsMad.cabal
@@ -34,6 +34,13 @@ executable mhs
                      , criterion
   default-language:    Haskell2010
 
+executable fw
+  hs-source-dirs:      src
+  main-is:             FrequentWords.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is FrequentWords
+  build-depends:       base
+  default-language:    Haskell2010
+
 test-suite monoidsMad-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
