--- a/monoidsMad.cabal
+++ b/monoidsMad.cabal
@@ -39,6 +39,8 @@ executable fw
   main-is:             FrequentWords.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is FrequentWords
   build-depends:       base
+                     , criterion
+                     , containers
   default-language:    Haskell2010
 
 test-suite monoidsMad-test
