--- a/monoidsMad.cabal
+++ b/monoidsMad.cabal
@@ -43,6 +43,13 @@ executable fw
                      , containers
   default-language:    Haskell2010
 
+executable mc
+  hs-source-dirs:      src
+  main-is:             MonoidalChars.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is MonoidalChars
+  build-depends:       base
+  default-language:    Haskell2010
+
 test-suite monoidsMad-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
